# PDFView

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
PdfiumAndroid/: .gitignore  CMakeLists.txt  build.gradle
PdfiumAndroid/src/main/java/com/shockwave/pdfium/: PdfDocument.java  PdfiumCore.java
PdfiumAndroid/src/main/jni/: Application_not_used.mk
PdfiumAndroid/src/main/jni/include/: fpdfview.h
PdfiumAndroid/src/main/jni/src/: BufferedBlockWriter.h  mainJNILib.cpp
android-pdf-viewer/: build.gradle
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/: BreakIteratorHelper.java  CacheManager.java  DecodingAsyncTask.java  DragPinchManager.java  PDFView.java  PDocSearchTask.java  PDocSelection.java  PdfFile.java
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/model/: SearchRecord.java  SearchRecordItem.java
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/scroll/: DefaultScrollHandle.java
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/util/: Util.java
android-pdf-viewer/src/main/res/drawable/: default_scroll_handle_bottom.xml  default_scroll_handle_left.xml  ic__8893109461577436997.xml
android-pdf-viewer/src/main/res/layout/: drag_handle.xml
sample/: .gitignore  build.gradle
sample/src/main/java/com/github/barteksc/sample/: PDFViewActivity.java
sample/src/main/res/layout/: activity_main.xml
sample/src/main/res/menu/: options.xml  search_menu.xml
